--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "pusher-js": "^8.0.1",
         "vue": "^3.2.45",
         "vue-router": "^4.1.6",
-        "vue-tippy": "^6.0.0"
+        "vue-tippy": "^6.0.0",
+        "vue3-lazyload": "^0.3.6"
     },
     "devDependencies": {
         "@vicons/fa": "^0.12.0",
